# starcrossed

./: .gitignore  CMakeLists.txt  build-all.bat  build-all.sh  build.bat  build.sh  build_engine.bat  build_engine.sh  build_windows.bat  clean.sh  configure.sh  debug.sh  run.sh  run_edit.sh  run_play.sh
engine/: build.bat  build.sh  edit.sh
engine/include/: animated_sprite.h  defines.h  engine_defines.h  renderer.h  resource_manager.h  shader.h  sprite.h  sprite_renderer.h  test.cpp  test.h  texture.h  timer.h
engine/src/: animated_sprite.cpp  renderer.cpp  resource_manager.cpp  shader.cpp  sprite.cpp  sprite_renderer.cpp  texture.cpp  timer.cpp
game/: build.bat  build.sh  edit.sh
game/include/: app.h  character.h  crew_member.h  entity.h  event.h  game.h  game_defines.h  global_enums.h  interactable.h  player.h  room.h  ship.h  tile.h  tile_world.h  ui.h  world.h
game/src/: app.cpp  character.cpp  crew_member.cpp  entity.cpp  event.cpp  game.cpp  interactable.cpp  main.cpp  player.cpp  room.cpp  ship.cpp  tile.cpp  tile_world.cpp  ui.cpp  world.cpp
include/: game.h  renderer.h
src/: game.cpp  main.cpp  renderer.cpp
